# Handwriting_Tool

./: .gitignore  README.md  pyproject.toml  render.yaml
configs/: base.yaml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: studio-preview.tsx
frontend/lib/: api.ts
handwriting-studio/backend/: main.py  requirements.txt  session_store.py
handwriting-studio/backend/engines/: character_extractor.py  imperfection_engine.py  layout_engine.py  paper_engine.py  pdf_generator.py  style_analyzer.py  variant_engine.py
handwriting-studio/backend/models/: schemas.py
handwriting-studio/backend/routers/: analyze.py  export.py  generate.py
handwriting-studio/backend/utils/: image_utils.py  text_utils.py
handwriting-studio/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
handwriting-studio/frontend/src/: App.jsx  styles.css
handwriting-studio/frontend/src/api/: handwritingAPI.js
src/handwriting_tool/: __init__.py  config.py  ingest.py  pipeline.py  types.py  utils.py
src/handwriting_tool/cli/: api.py  generate.py  serve.py
src/handwriting_tool/data/: synthetic.py
src/handwriting_tool/models/: __init__.py  line_generator.py  recognizer.py  style_encoder.py  text_encoder.py
src/handwriting_tool/render/: __init__.py  export.py  fonts.py  imperfections.py  layout.py  presets.py  renderer.py  spacing.py  strokes.py  style_extractor.py
src/handwriting_tool/training/: train_generator.py
src/handwriting_tool/web/: __init__.py  api.py  server.py
(+18 files in other folders)
