[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting-style-transfer"
version = "0.1.0"
description = "Practical baseline for handwriting style transfer with human-like imperfections."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11",
  "pytesseract>=0.3",
  "opencv-python>=4.9",
]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "torchvision>=0.17",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
